# NAISENT_workspace

./: .gitignore  CONVOLUTIONAL.py  CUDA_NAISENT.py  CUDA_test.py  NAISENT.py  NAISENT_LM(OLD).py  NAISENT_LM_test.py  NAISENT_LM_test_2.py  NAISENT_LM_working.py  QnA_language_model.py  README.md  Versus_ONL_test.py  bpe_model.json  bpe_model_readable.json  bpe_tokenizer.py  finetune_text.txt  generate_math_test.py  inference_test.py  lstm_test.py  math_test.py  pretrain_text.txt  shape_recognition.py  t.json  t.txt  test.json  test_language_model.py  testingONL.py  testing_convolutionalONL.py  tokenizer.py  training_data.py  transformersTest.py  vocabulary.py
CudaNeurologicalLibrary/: CMakeLists.txt  pybind_wrapper.cpp  python.py
CudaNeurologicalLibrary/OLD/: linear_dense(ADJUSTMENT).cu  linear_dense.cu  multi_head_masked_self_attention_KV_OLD.cu  multi_head_masked_self_attention_queries_OLD.cu  t.cu
DATA/: container.py
NeurologicalLibrary/: testing.py
NeurologicalLibrary/OLD_cpp/: GraphLayer.cpp  GraphLayer.h  MultiLayer.cpp  MultiLayer.h  NeurologicalStructureLogic.cpp  NeurologicalStructureLogic.h  test.cpp
NeurologicalLibrary/bridge/: CMakeLists.txt  Pybind11ToJson.py  pybind_wrapper.cpp  pybind_wrapper_test.cpp  pythonConversion.py  pythonConversion_test.py
NeurologicalLibrary/cpp/: NeurologicalStructureLogic.cpp  NeurologicalStructureLogic.h  cppCode.cpp  cppCode.h
NeurologicalLibrary/cpp/AI/: BaseActivationFunction.cpp  BaseActivationFunction.h  ChannelsFlattener.cpp  ChannelsFlattener.h  ChannelsSpreader.cpp  ChannelsSpreader.h  ConvolutionalLayer.cpp  ConvolutionalLayer.h  ConvolutionalPool.cpp  ConvolutionalPool.h  DenseLayer.cpp  DenseLayer.h  Extra.cpp  Extra.h  Extra.inl  LSTM_RecursiveLayer.cpp  LSTM_RecursiveLayer.h  LossFunctions.cpp  LossFunctions.h  Neurological.cpp  Neurological.h  NeurologicalComponent.cpp  NeurologicalComponent.h  NeurologicalComponentsChain.cpp  NeurologicalComponentsChain.h  Optimization.cpp  Optimization.h
NeurologicalLibrary/cpp/AI/ActivationFunctions/: ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  SoftPlus.cpp  SoftPlus.h  Softmax.cpp  Softmax.h  Tanh.cpp  Tanh.h
NeurologicalLibrary/cpp/AI/Helpers/: CustomVector2.cpp  CustomVector2.h  CustomVector2.inl
OLD PYTHON THINGS/: convolutionalTest.py  main.py  recursiveConvolutionalTest.py  recursiveTest.py  test.py
OLD PYTHON THINGS/python/: NAISENT_Client.py  NAISENT_Structure.py
OLD PYTHON THINGS/python/OLD/: Environment.py  GameObject.py
OptimizedNeurologicalLibrary/: CMakeLists.txt  pybind_wrapper.cpp  python.py
OptimizedNeurologicalLibrary/save/: ConvolutionalLayerSave.cpp  ConvolutionalLayerSave2.cpp  DecoderOnly_Transformer(SAVE).cpp  DecoderOnly_Transformer(SAVE).h  DenseLayerSave.cpp
SHOWCASES/: BASIC_SHAPE_RECOGNITION_CPU.py  BETA_NAISENT_BALL_SEEKER_CPU.py  LSTM_MATH_TEST_CPU.py  NAISENT_ELM_CPU.py  NAISENT_LM_CUDA.py  NAISENT_SLM_CUDA.py  SHAPE_RECOGNITION_CPU.py
SHOWCASES/BASIC_CLASSES/: NAISENT_Client.py  NAISENT_Storage.py  NAISENT_Structure.py
cs/: Environment.cs
cs/Display_WinForms/: Display(WinForms).csproj  Display(WinForms).sln  EnvironmentForm.cs  Form1.Designer.cs  Form1.cs  FormReader.cs  PreviewForm.cs  Program.cs  Win32Extra.cs
cs/Display_WinForms/Environments/: BounceBallEnvironment.cs  ShapeTestEnvironment.cs
cs/Display_WinForms/Guide/: BounceBallGuide.cs  ShapeTestGuide.cs
cs/Display_WinForms/Hosting/: BounceBallServer.cs  ShapeTestServer.cs  SharedUtil.cs
cs/Display_WinForms/Mechanics/: GameObject.cs
